<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jana"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="204dp"
        android:text="@string/daily_water_goal_liters"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="-129dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@+id/textView"
        android:hint="@string/insert"
        android:inputType="numberDecimal"
        android:textColor="@color/true_red"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/bullseye"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/editText"
        android:layout_marginStart="-97dp"
        android:layout_marginTop="95dp"
        android:layout_toEndOf="@+id/editText"
        android:adjustViewBounds="true"
        android:background="@android:color/white"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bullseye" />

    <TextView
        android:id="@+id/recommended"
        android:layout_width="128dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="272dp"
        android:layout_marginTop="206dp"
        android:text="@string/recommended_daily_intake"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/img_recommended"
        android:layout_width="134dp"
        android:layout_height="305dp"
        android:layout_below="@+id/recommended"
        android:layout_alignStart="@+id/recommended"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-7dp"
        android:src="@drawable/recommended" />


</RelativeLayout>